change : slot requests done
